--- a/core-marker-app/package.json
+++ b/core-marker-app/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "cookie-parser": "^1.4.6",
+    "emailjs-com": "^3.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
