--- a/core-marker-app/Backend/package.json
+++ b/core-marker-app/Backend/package.json
@@ -20,7 +20,8 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
