--- a/core-marker-app/package.json
+++ b/core-marker-app/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.3.30",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.436.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
