--- a/core-marker-app/package.json
+++ b/core-marker-app/package.json
@@ -15,6 +15,8 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "body-parser": "^1.20.2",
+    "browser-image-compression": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.3.30",
