--- a/core-marker-app/Backend/package.json
+++ b/core-marker-app/Backend/package.json
@@ -21,6 +21,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.5.4",
     "node-fetch": "^3.3.2"
   },
